--- a/start_page/templates/start_page/one_page/one.html
+++ b/start_page/templates/start_page/one_page/one.html
@@ -638,8 +638,8 @@
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="433" data-field-left-res-320-value="0" data-field-width-res-320-value="321" data-field-top-res-480-value="310" data-field-left-res-480-value="10" data-field-width-res-480-value="421"
                         data-field-top-res-640-value="282" data-field-left-res-640-value="36" data-field-width-res-640-value="510" data-field-top-res-960-value="314" data-field-left-res-960-value="10" data-field-width-res-960-value="476">
-                        <div class="tn-atom" field="tn_text_1679020878917">{% if settings == None %}Йога и медитация,
-                            как их преподают в Индии. Глубокие знания простым и современным языком
+                        <div class="tn-atom" field="tn_text_1679020878917">{% if settings == None %}Практика преподается с использованием
+                            глубоких знаний, выраженных доступным языком.
                         {% else %}{{ settings.description }}{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5645089951679020878920 t-animate" data-elem-id="1679020878920" data-elem-type="button" data-field-top-value="303" data-field-left-value="733" data-field-height-value="51" data-field-width-value="171"
@@ -664,14 +664,14 @@
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinleft" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="144" data-field-left-res-320-value="6" data-field-width-res-320-value="299" data-field-top-res-480-value="175" data-field-left-res-480-value="11" data-field-width-res-480-value="460"
                         data-field-top-res-640-value="205" data-field-width-res-640-value="621">
-                        <h1 class="tn-atom" field="tn_text_1679020878933">{% if settings == None %}йоги и медитации
+                        <h1 class="tn-atom" field="tn_text_1679020878933">{% if settings == None %}йоги и практики
                         {% else %}{{ settings.h1_2 }}{% endif %}</h1>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5645089951679020878935 t-animate" data-elem-id="1679020878935" data-elem-type="text" data-field-top-value="100" data-field-left-value="34" data-field-width-value="441" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinright" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="104" data-field-left-res-320-value="10" data-field-width-res-320-value="301" data-field-top-res-480-value="111" data-field-left-res-480-value="11" data-field-width-res-480-value="461"
                         data-field-top-res-640-value="141" data-field-left-res-640-value="34" data-field-width-res-640-value="610">
-                        <h1 class="tn-atom" field="tn_text_1679020878935">{% if settings == None %}онлайн клуб{% else %}
+                        <h1 class="tn-atom" field="tn_text_1679020878935">{% if settings == None %}Online клуб{% else %}
                         {{ settings.h1_1 }}{% endif %}</h1>
                     </div>
                 </div>
