--- a/start_page/templates/start_page/two_page/o_club.html
+++ b/start_page/templates/start_page/two_page/o_club.html
@@ -318,7 +318,7 @@
                  data-field-top-res-640-value="134" data-field-left-res-640-value="70"
                  data-field-width-res-640-value="401" data-field-left-res-960-value="70">
                 <div class="tn-atom" field="tn_text_1678667325575">{% if page2 == None %}
-                    Опытные и&nbsp;профессиональные преподаватели. Сертификаты Международного альянса йоги.
+                    Преподаватели&nbsp;, обладающие богатым опытом и профессионализмом, сертификаты от альянса йоги.
                     {% else %}{{ page2.disc1 }}{% endif %}
                 </div>
             </div>
@@ -336,8 +336,8 @@
                  data-field-width-res-640-value="464" data-field-top-res-960-value="69"
                  data-field-left-res-960-value="499">
                 <div class="tn-atom" field="tn_text_1678667325578">{% if page2 == None %}
-                    В&nbsp;нашей команде сотни людей, мы&nbsp;рады видеть каждого, кто&nbsp;решил заниматься своим
-                    саморазвитием, йогой и&nbsp;медитаций, или&nbsp;просто нуждается в&nbsp;мотивации и&nbsp;поддержке
+                    В нашей команде нас сотни, и мы приветствуем всех, кто стремится к
+                    саморазвитию через занятия йогой и медитацией или ищет мотивацию и поддержку.
                     {% else %}{{ page2.disc2 }}{% endif %}
                 </div>
             </div>
