--- a/start_page/templates/start_page/five_page/love_job.html
+++ b/start_page/templates/start_page/five_page/love_job.html
@@ -1447,18 +1447,30 @@
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857506" data-elem-id="1678714857506" data-elem-type="text" data-field-top-value="125" data-field-left-value="80" data-field-width-value="404" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="98" data-field-left-res-320-value="10" data-field-width-res-320-value="302"
                         data-field-top-res-480-value="109" data-field-top-res-640-value="120" data-field-left-res-640-value="151" data-field-top-res-960-value="119" data-field-left-res-960-value="9">
-                        <div class="tn-atom" field="tn_text_1678714857506">что делаем</div>
+                        <div class="tn-atom" field="tn_text_1678714857506">{% if page5 == None %}что делаем{% else %}
+                            {% if page5.title1_3 %}{{ page5.title1_3 }}{% else %}что делаем
+                            {% endif %}{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857510" data-elem-id="1678714857510" data-elem-type="text" data-field-top-value="46" data-field-left-value="186" data-field-width-value="157" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="34" data-field-left-res-320-value="85" data-field-width-res-320-value="149"
                         data-field-top-res-480-value="42" data-field-top-res-640-value="41" data-field-left-res-640-value="240" data-field-top-res-960-value="51" data-field-left-res-960-value="120">
-                        <div class="tn-atom" field="tn_text_1678714857510">любим</div>
+                        <div class="tn-atom" field="tn_text_1678714857510">{% if page5 == None %}любим{% else %}
+                            {% if page5.title1_2 %}{{ page5.title1_2 }}{% else %}любим
+                            {% endif %}{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857512 t-animate" data-elem-id="1678714857512" data-elem-type="text" data-field-top-value="204" data-field-left-value="79" data-field-width-value="488" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinleft" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="322" data-field-left-res-320-value="10" data-field-width-res-320-value="301" data-field-top-res-480-value="189" data-field-left-res-480-value="10" data-field-width-res-480-value="461"
                         data-field-top-res-640-value="196" data-field-left-res-640-value="96" data-field-top-res-960-value="199" data-field-left-res-960-value="10" data-field-width-res-960-value="449">
-                        <div class="tn-atom" field="tn_text_1678714857512">Забота о&nbsp;каждом ученике у&nbsp;нас в&nbsp;приоритете. Мы&nbsp;любим то, что делаем. И&nbsp;наши студенты это чувствуют (тысячи студентов онлайн и&nbsp;сотни на&nbsp;наших живых семинарах, ретритах и&nbsp;Йогаслетах).</div>
+                        <div class="tn-atom" field="tn_text_1678714857512">{% if page5 == None %}Забота о&nbsp;каждом ученике
+                            у&nbsp;нас в&nbsp;приоритете.
+                            Мы&nbsp;любим то, что делаем. И&nbsp;наши студенты это чувствуют (тысячи студентов онлайн и&nbsp;сотни
+                            на&nbsp;наших живых семинарах, ретритах и&nbsp;Йогаслетах).{% else %}
+                            {% if page5.desc %}{{ page5.desc }}{% else %}Забота о&nbsp;каждом ученике у&nbsp;нас в&nbsp;приоритете.
+                            Мы&nbsp;любим то, что делаем. И&nbsp;наши студенты это чувствуют (тысячи студентов онлайн и&nbsp;сотни
+                            на&nbsp;наших живых семинарах, ретритах и&nbsp;Йогаслетах).
+                            {% endif %}{% endif %}
+                            </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857570" data-elem-id="1678714857570" data-elem-type="image" data-field-top-value="395" data-field-left-value="330" data-field-width-value="289" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-filewidth-value="1369" data-field-fileheight-value="232" data-field-top-res-320-value="826"
@@ -1477,22 +1489,33 @@
                         data-animate-duration="1" data-animate-mobile="y" data-field-top-res-320-value="163" data-field-left-res-320-value="10" data-field-height-res-320-value="139" data-field-width-res-320-value="300" data-field-top-res-480-value="317" data-field-left-res-480-value="10"
                         data-field-height-res-480-value="213" data-field-width-res-480-value="460" data-field-top-res-640-value="319" data-field-left-res-640-value="88" data-field-height-res-640-value="199" data-field-width-res-640-value="459" data-field-top-res-960-value="77"
                         data-field-left-res-960-value="552" data-field-height-res-960-value="184" data-field-width-res-960-value="397">
-                        <div class="tn-atom t-bgimg" data-original="{% static 'images/1V4A0082_1.png' %}" style="background-image:url(&#x27;{% static 'images/1V4A0082_1.png' %}&#x27;);"></div>
+                        <div class="tn-atom t-bgimg" data-original="{% if page5 == None %}
+                        {% static 'images/1V4A0082_1.png' %}{% else %}
+                            {% if page5.image %}{{ page5.image }}{% else %}{% static 'images/1V4A0082_1.png' %}
+                            {% endif %}{% endif %}" style="background-image:url(&#x27;{% if page5 == None %}
+                        {% static 'images/1V4A0082_1.png' %}{% else %}
+                            {% if page5.image %}{{ page5.image }}{% else %}{% static 'images/1V4A0082_1.png' %}
+                            {% endif %}{% endif %}&#x27;);"></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857579" data-elem-id="1678714857579" data-elem-type="text" data-field-top-value="332" data-field-left-value="80" data-field-width-value="290" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="482" data-field-left-res-320-value="9" data-field-width-res-320-value="311"
                         data-field-top-res-480-value="570" data-field-left-res-480-value="10" data-field-top-res-640-value="552" data-field-left-res-640-value="175" data-field-top-res-960-value="327" data-field-left-res-960-value="10">
-                        <div class="tn-atom" field="tn_text_1678714857579">Достижения клуба:</div>
+                        <div class="tn-atom" field="tn_text_1678714857579">{% if page5 == None %}Достижения клуба:
+                            {% else %}
+                            {% if page5.title2 %}{{ page5.title2 }}{% else %}Достижения клуба:
+                            {% endif %}{% endif %}
+                            </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678715000749" data-elem-id="1678715000749" data-elem-type="text" data-field-top-value="61" data-field-left-value="80" data-field-width-value="458" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="46" data-field-left-res-320-value="10" data-field-width-res-320-value="91"
                         data-field-top-res-480-value="45" data-field-top-res-640-value="56" data-field-left-res-640-value="137" data-field-top-res-960-value="62" data-field-left-res-960-value="10">
-                        <div class="tn-atom" field="tn_text_1678715000749">Мы</div>
+                        <div class="tn-atom" field="tn_text_1678715000749">
+                            {% if page5 == None %}Мы{% else %}{% if page5.title1_1 %}{{ page5.title1_1 }}{% else %}МЫ
+                            {% endif %}{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678715039108" data-elem-id="1678715039108" data-elem-type="text" data-field-top-value="60" data-field-left-value="381" data-field-width-value="88" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="46" data-field-left-res-320-value="246" data-field-width-res-320-value="70"
                         data-field-top-res-480-value="45" data-field-top-res-640-value="56" data-field-left-res-640-value="439" data-field-top-res-960-value="62" data-field-left-res-960-value="306">
-                        <div class="tn-atom" field="tn_text_1678715039108">то,</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5622916201678714857581 t-animate" data-elem-id="1678714857581" data-elem-type="text" data-field-top-value="463" data-field-left-value="146" data-field-width-value="126" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeindown" data-animate-duration="1"
