добавил модель отзывы

--- a/start_page/templates/start_page/nine_page/reviews2.html
+++ b/start_page/templates/start_page/nine_page/reviews2.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-        {% if reviews != None %}
+
         <div id="rec562837650" class="r t-rec" style=" " data-animationappear="off" data-record-type="396">
             <!-- T396 -->
             <style>
@@ -218,7 +218,6 @@
             </script>
             <!-- /T396 -->
         </div>
-
         <div id="rec562837987" class="r t-rec t-rec_pb_0" style="padding-bottom:0px; " data-animationappear="off" data-record-type="396">
             <!-- T396 -->
             <style>
@@ -657,53 +656,53 @@
                     data-artboard-height-res-960="300">
                     <div class="t396__carrier" data-artboard-recid="562837987"></div>
                     <div class="t396__filter" data-artboard-recid="562837987"></div>
-                    {% if reviews.image_1 %}<div class="t396__elem tn-elem tn-elem__5628379871678749314972" data-elem-id="1678749314972" data-elem-type="shape" data-field-top-value="19" data-field-left-value="434" data-field-height-value="325" data-field-width-value="325"
+                    <div class="t396__elem tn-elem tn-elem__5628379871678749314972" data-elem-id="1678749314972" data-elem-type="shape" data-field-top-value="19" data-field-left-value="434" data-field-height-value="325" data-field-width-value="325"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1"
                         data-field-left-res-320-value="330" data-field-top-res-480-value="0" data-field-left-res-480-value="411" data-field-top-res-640-value="1" data-field-left-res-640-value="340" data-field-top-res-960-value="1" data-field-left-res-960-value="330"
                         data-field-height-res-960-value="300" data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_1 }}" style="background-image:url(&#x27;{{ reviews.image_1 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_1 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_2 %}<div class="t396__elem tn-elem tn-elem__5628379871678749314988" data-elem-id="1678749314988" data-elem-type="shape" data-field-top-value="19" data-field-left-value="789" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild3366-3666-4336-a633-616437346565/Frame_52_1.png" style="background-image:url(&#x27;images/Frame_52_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild3366-3666-4336-a633-616437346565/Frame_52_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871678749314988" data-elem-id="1678749314988" data-elem-type="shape" data-field-top-value="19" data-field-left-value="789" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="649"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="732" data-field-top-res-640-value="1" data-field-left-res-640-value="670" data-field-top-res-960-value="1" data-field-left-res-960-value="650" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_2 }}" style="background-image:url(&#x27;{{ reviews.image_2 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_2 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_3 %}<div class="t396__elem tn-elem tn-elem__5628379871678749314960" data-elem-id="1678749314960" data-elem-type="shape" data-field-top-value="19" data-field-left-value="79" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild3961-3266-4232-a132-613963396137/Frame_53_1.png" style="background-image:url(&#x27;images/Frame_53_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild3961-3266-4232-a132-613963396137/Frame_53_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871678749314960" data-elem-id="1678749314960" data-elem-type="shape" data-field-top-value="19" data-field-left-value="79" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="11"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="90" data-field-top-res-640-value="1" data-field-top-res-960-value="1" data-field-left-res-960-value="10" data-field-height-res-960-value="300" data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_3 }}" style="background-image:url(&#x27;{{ reviews.image_3 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_3 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_4 %}<div class="t396__elem tn-elem tn-elem__5628379871679276075395" data-elem-id="1679276075395" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1144" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild3337-6633-4839-b736-383337653235/Frame_51_1.png" style="background-image:url(&#x27;images/Frame_51_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild3337-6633-4839-b736-383337653235/Frame_51_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871679276075395" data-elem-id="1679276075395" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1144" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="968"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="1053" data-field-top-res-640-value="1" data-field-left-res-640-value="1000" data-field-top-res-960-value="1" data-field-left-res-960-value="970" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_4 }}" style="background-image:url(&#x27;{{ reviews.image_4 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_4 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_5 %}<div class="t396__elem tn-elem tn-elem__5628379871679276075403" data-elem-id="1679276075403" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1499" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild3962-3265-4963-b366-323961613164/Frame_54_2_1.png" style="background-image:url(&#x27;images/Frame_54_2_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild3962-3265-4963-b366-323961613164/Frame_54_2_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871679276075403" data-elem-id="1679276075403" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1499" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="1287"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="1374" data-field-top-res-640-value="1" data-field-left-res-640-value="1330" data-field-top-res-960-value="1" data-field-left-res-960-value="1290" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_5 }}" style="background-image:url(&#x27;{{ reviews.image_5 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_5 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_6 %}<div class="t396__elem tn-elem tn-elem__5628379871679276075407" data-elem-id="1679276075407" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1854" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="{% static 'images/Frame_55_1_1.png' %}" style="background-image:url(&#x27;images/Frame_55_1_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="{% static 'images/Frame_55_1_1.png' %}"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871679276075407" data-elem-id="1679276075407" data-elem-type="shape" data-field-top-value="19" data-field-left-value="1854" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="1606"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="1695" data-field-top-res-640-value="1" data-field-left-res-640-value="1660" data-field-top-res-960-value="1" data-field-left-res-960-value="1610" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_6 }}" style="background-image:url(&#x27;{{ reviews.image_6 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_6 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_7 %}<div class="t396__elem tn-elem tn-elem__5628379871679277040508" data-elem-id="1679277040508" data-elem-type="shape" data-field-top-value="19" data-field-left-value="2209" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild6561-6162-4235-b339-656364323438/Frame_56_1.png" style="background-image:url(&#x27;images/Frame_56_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild6561-6162-4235-b339-656364323438/Frame_56_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871679277040508" data-elem-id="1679277040508" data-elem-type="shape" data-field-top-value="19" data-field-left-value="2209" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="1925"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="2016" data-field-top-res-640-value="1" data-field-left-res-640-value="1990" data-field-top-res-960-value="1" data-field-left-res-960-value="1930" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_7 }}" style="background-image:url(&#x27;{{ reviews.image_7 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_7 }}"></div>
-                    </div>{% endif %}
-                    {% if reviews.image_8 %}<div class="t396__elem tn-elem tn-elem__5628379871679277040515" data-elem-id="1679277040515" data-elem-type="shape" data-field-top-value="19" data-field-left-value="2564" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild3734-6138-4164-a663-653863393030/Frame_57_1.png" style="background-image:url(&#x27;images/Frame_57_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild3734-6138-4164-a663-653863393030/Frame_57_1.png"></div>
+                    </div>
+                    <div class="t396__elem tn-elem tn-elem__5628379871679277040515" data-elem-id="1679277040515" data-elem-type="shape" data-field-top-value="19" data-field-left-value="2564" data-field-height-value="325" data-field-width-value="325" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="1" data-field-left-res-320-value="2244"
                         data-field-top-res-480-value="0" data-field-left-res-480-value="2337" data-field-top-res-640-value="1" data-field-left-res-640-value="2320" data-field-top-res-960-value="1" data-field-left-res-960-value="2250" data-field-height-res-960-value="300"
                         data-field-width-res-960-value="300">
-                        <div class="tn-atom t-bgimg" data-original="{{ reviews.image_8 }}" style="background-image:url(&#x27;{{ reviews.image_8 }}&#x27;);" data-zoomable="yes" data-img-zoom-url="{{ reviews.image_8 }}"></div>
-                    </div>{% endif %}
+                        <div class="tn-atom t-bgimg" data-original="https://static.tildacdn.com/tild6336-3337-4162-b265-613738383562/Frame_58_1.png" style="background-image:url(&#x27;images/Frame_58_1.png&#x27;);" data-zoomable="yes" data-img-zoom-url="https://static.tildacdn.com/tild6336-3337-4162-b265-613738383562/Frame_58_1.png"></div>
+                    </div>
                 </div>
             </div>
             <script>
@@ -718,7 +717,6 @@
             </script>
             <!-- /T396 -->
         </div>
-        {% endif %}
         <div id="rec562851675" class="r t-rec" style=" " data-animationappear="off" data-record-type="131">
             <!-- T123 -->
             <div class="t123">
