--- a/start_page/templates/start_page/base.html
+++ b/start_page/templates/start_page/base.html
@@ -181,7 +181,9 @@
 
 {% include "start_page/ten_page/lead.html" %}
 
+{% if quests_list != None %}
 {% include "start_page/eleven_page/questions.html" %}
+{% endif %}
 
 {% include "start_page/pop_up/7_day.html" %}
 
