--- a/start_page/templates/start_page/ten_page/lead.html
+++ b/start_page/templates/start_page/ten_page/lead.html
@@ -534,34 +534,63 @@
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px" data-field-widthunits-value="px" data-field-top-res-320-value="72" data-field-left-res-320-value="19"
                         data-field-height-res-320-value="208" data-field-width-res-320-value="283" data-field-top-res-480-value="60" data-field-left-res-480-value="15" data-field-height-res-480-value="452" data-field-width-res-480-value="450" data-field-top-res-640-value="89"
                         data-field-left-res-640-value="44" data-field-height-res-640-value="413" data-field-width-res-640-value="553" data-field-top-res-960-value="70" data-field-left-res-960-value="110" data-field-height-res-960-value="740" data-field-width-res-960-value="740">
-                        <div class="tn-atom t-bgimg" data-original="{% static 'images/AirBrush_20210902161.png' %}" style="background-image:url(&#x27;{% static 'images/AirBrush_20210902161.png' %}&#x27;);"></div>
+                        <div class="tn-atom t-bgimg" data-original="{% if leads == None %}
+                        {% static 'images/AirBrush_20210902161.png' %}{% else %}
+                            {% if leads.image %}{{ leads.image }}{% else %}
+                            {% static 'images/AirBrush_20210902161.png' %}
+                            {% endif %}{% endif %}" style="background-image:url(&#x27;{% if leads == None %}
+                        {% static 'images/AirBrush_20210902161.png' %}{% else %}
+                            {% if leads.image %}{{ leads.image }}{% else %}
+                            {% static 'images/AirBrush_20210902161.png' %}
+                            {% endif %}{% endif %}&#x27;);"></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5628470231678755642711" data-elem-id="1678755642711" data-elem-type="text" data-field-top-value="250" data-field-left-value="828" data-field-width-value="236" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="407" data-field-left-res-320-value="20" data-field-width-res-320-value="219"
                         data-field-top-res-480-value="661" data-field-left-res-480-value="45" data-field-top-res-640-value="619" data-field-left-res-640-value="349" data-field-top-res-960-value="906" data-field-left-res-960-value="493" data-field-width-res-960-value="261">
-                        <div class="tn-atom" field="tn_text_1678755642711">интенсив</div>
+                        <div class="tn-atom" field="tn_text_1678755642711">{% if leads == None %}
+                            интенсив{% else %}
+                            {% if leads.title1_1 %}{% if leads.title1_4 %}
+                            {{ leads.title1_4 }}{% endif %}{% endif %}
+                            {% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5628470231678755642717 t-animate" data-elem-id="1678755642717" data-elem-type="text" data-field-top-value="315" data-field-left-value="521" data-field-width-value="459" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-animate-style="fadeinleft" data-animate-duration="1"
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="451" data-field-left-res-320-value="20" data-field-width-res-320-value="265" data-field-top-res-480-value="711" data-field-left-res-480-value="45" data-field-width-res-480-value="343"
                         data-field-top-res-640-value="678" data-field-left-res-640-value="42" data-field-width-res-640-value="426" data-field-top-res-960-value="965" data-field-left-res-960-value="150" data-field-width-res-960-value="641">
-                        <div class="tn-atom" field="tn_text_1678755642717">Уроки по 10 минут помогут вам погрузиться в мир йоги</div>
+                        <div class="tn-atom" field="tn_text_1678755642717">
+                            {% if leads == None %}
+                            Уроки по 10 минут помогут вам погрузиться в мир йоги{% else %}
+                            {% if leads.title2 %}
+                            {{ leads.title2 }}{% else %}Уроки по 10 минут помогут вам погрузиться в мир йоги{% endif %}
+                            {% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5628470231678755642713" data-elem-id="1678755642713" data-elem-type="text" data-field-top-value="236" data-field-left-value="521" data-field-width-value="255" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="363" data-field-left-res-320-value="20" data-field-top-res-480-value="613"
                         data-field-left-res-480-value="45" data-field-top-res-640-value="604" data-field-left-res-640-value="40" data-field-top-res-960-value="887" data-field-left-res-960-value="148">
-                        <div class="tn-atom" field="tn_text_1678755642713">семидневный</div>
+                        <div class="tn-atom" field="tn_text_1678755642713">{% if leads == None %}
+                            семидневный{% else %}
+                            {% if leads.title1_1 %}{% if leads.title1_3 %}
+                            {{ leads.title1_3 }}{% endif %}{% endif %}
+                            {% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5628470231678761038394" data-elem-id="1678761038394" data-elem-type="text" data-field-top-value="151" data-field-left-value="521" data-field-width-value="501" data-field-axisy-value="top" data-field-axisx-value="left"
                         data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px" data-field-top-res-320-value="297" data-field-left-res-320-value="20" data-field-width-res-320-value="275"
                         data-field-top-res-480-value="542" data-field-left-res-480-value="45" data-field-width-res-480-value="328" data-field-top-res-640-value="528" data-field-left-res-640-value="42" data-field-width-res-640-value="527" data-field-top-res-960-value="850"
                         data-field-left-res-960-value="150" data-field-width-res-960-value="653">
-                        <div class="tn-atom" field="tn_text_1678761038394">ПРойти<br>бесплатный</div>
-                    </div>
+                        <div class="tn-atom" field="tn_text_1678761038394">{% if leads == None %}
+                            Пройти<br>бесплатный{% else %}
+                            {% if leads.title1_1 %}{{ leads.title1_1 }}{% if leads.title1_2 %}<br>
+                            {{ leads.title1_2 }}{% endif %}{% else %}Пройти<br>бесплатный{% endif %}
+                            {% endif %}</div></div>
                     <div class="t396__elem tn-elem tn-elem__5628470231679021602072" data-elem-id="1679021602072" data-elem-type="button" data-field-top-value="392" data-field-left-value="519" data-field-height-value="59" data-field-width-value="260" data-field-axisy-value="top"
                         data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value data-field-top-res-320-value="524" data-field-left-res-320-value="20"
                         data-field-width-res-320-value="280" data-field-top-res-480-value="779" data-field-left-res-480-value="41" data-field-top-res-640-value="756" data-field-left-res-640-value="40" data-field-top-res-960-value="1017" data-field-left-res-960-value="150"
-                        data-field-width-res-960-value="270"><a class="tn-atom" href="#popup:embedcode">ЗАНЯТЬ СВОЕ МЕСТО</a></div>
+                        data-field-width-res-960-value="270"><a class="tn-atom" href="#popup:embedcode">
+                        {% if leads == None %}
+                            ЗАНЯТЬ СВОЕ МЕСТО{% else %}
+                            {% if leads.button %}
+                            {{ leads.button }}{% else %}ЗАНЯТЬ СВОЕ МЕСТО{% endif %}
+                            {% endif %}</a></div>
                     <div class="t396__elem tn-elem tn-elem__5628470231679022360671" data-elem-id="1679022360671" data-elem-type="image" data-field-top-value="60" data-field-left-value="-380"
                         data-field-width-value="200" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value data-field-widthunits-value="px"
                         data-field-filewidth-value="476" data-field-fileheight-value="202" data-field-top-res-320-value="595" data-field-left-res-320-value="120" data-field-width-res-320-value="253" data-field-top-res-640-value="99">
